@@ -12,6 +12,7 @@ namespace SyntopiaCore {
 		class ProgressiveOutput {
 		public:
 			ProgressiveOutput(int w, int h) : w(w), h(h) {
+				mutex = new QMutex();
 				colors = new Vector3f[w*h];
 				weights = new double[w*h];
 				for (int x = 0; x < w; x++) {	
@@ -23,32 +24,33 @@ namespace SyntopiaCore {
 			}
 
 			~ProgressiveOutput() {
+				delete mutex;
 				delete[] colors;
 				delete[] weights;
 			}
 
 			void addIteration(Vector3f* newColors, double* newWeights) {
-				mutex.lock();
+				mutex->lock();
 				for (int x = 0; x < w; x++) {	
 					for (int y = 0; y < h; y++) {	
 						colors[x+y*w] = colors[x+y*w] + newColors[x+y*w];
 						weights[x+y*w] = weights[x+y*w] + newWeights[x+y*w];
 					}
 				}
-				mutex.unlock();
+				mutex->unlock();
 			};
 
 			QImage getImage() {
 				QImage im(w,h, QImage::Format_RGB32);
 
-				mutex.lock();
+				mutex->lock();
 				for (int x = 0; x < w; x++) {	
 					for (int y = 0; y < h; y++) {	
 						Vector3f c = colors[x+y*w]/weights[x+y*w];
 						im.setPixel(x,y,qRgb(c.x()*255, c.y()*255, c.z()*255));
 					}
 				}
-				mutex.unlock();
+				mutex->unlock();
 				return im;
 			}
 
@@ -57,7 +59,7 @@ namespace SyntopiaCore {
 			int h;
 			Vector3f* colors;
 			double* weights;
-			QMutex mutex;
+			QMutex* mutex;
 		};
 
 	}
